# simple-gradio-chatbot

./: .gitignore  AGENTS.md  README.md  TEST_RESULTS.md  pyproject.toml  requirements.txt
context-engineering/01-requirements/: acceptance-criteria-detailed.md  edge-cases-catalog.md  prd-complete.md  user-stories-exhaustive.md
context-engineering/02-technology/: dependency-matrix.md  framework-comparisons.md  (+2 more)
docs/: acceptance-criteria.md  accessibility-compliance-wcag.md  api-specifications.md  architecture.md  audit-gaps.md  business-rules.md  code-organization.md  coding-standards.md  component-guides.md  component-interaction-specifications.md  components.md  constraints.md  context-validation.md  data-flows.md  data-models.md  deployment-checklist.md  deployment.md  documentation-standards.md  edge-cases.md  feature-priorities.md  handoff-package.md  implementation-ready.md  implementation-roadmap.md  integration-patterns.md  integration-testing.md  interfaces.md  performance-baselines.md  product-requirements.md  quality-assessment.md  security-considerations.md  specification-audit.md  success-metrics.md  tech-validation.md  testing-standards.md  ui-implementation-summary.md  ui-ux-deliverables-summary.md  ui-ux-design-specifications.md  user-journey-flowcharts.md  user-journeys.md  wireframe-diagrams.md
src/: __init__.py  main.py
tests/: __init__.py  conftest.py  coverage_report_phase5.md  integration_results_phase5.md  performance_report_phase5.md  quality_assessment_phase5.md  quality_gate_assessment_phase5.md  test_execution_report_phase7.md
(+120 files in other folders)
