[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-ai-chatbot"
version = "1.0.0"
description = "Personal AI chatbot application with Gradio interface and monitoring utilities."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gradio>=5.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "cryptography>=41.0.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "psutil>=5.9",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
]
markers = [
    "e2e: end-to-end tests",
    "asyncio: mark tests that require asyncio event loop",
]
